@@ -1,5 +1,8 @@
 2008-04-24  Kouhei Sutou  <kou@cozmixng.org>
 
+	* pkg-config.rb (PackageConfig#guess_default_path): ignore
+	require 'dl/import' error.
+
 	* pkg-config.rb (PackageConfig#guess_default_path): support
 	PKG_CONFIG_LIBDIR.
 	Suggested by OBATA Akio. Thanks!!!
